--- a/master.yaml
+++ b/master.yaml
@@ -3,7 +3,7 @@ info:
   version: '1.0'
   title: MLproject_hotel_booking
   description: >-
-    A simple model to get tell whether or not someone will cancel a hotel booking or not
+    A model to get tell whether or not someone will cancel a hotel booking or not
   termsOfService: 'http://swagger.io/terms/'
   contact:
     name: REST Logistic Regression - Hotel Bookings
@@ -11,31 +11,74 @@ info:
     name: Apache
 #adding confusion matrix
 paths:
-  /prediction/{id}: 
+  /predict_cancellation/<hotel>/<market>/<deposit_type>/<month>/<day>/<weeknight>/<weekendnights>/<adults>:
     get:
-      tags: 
-      operationId: logreg.predict 
-      description: returns the prediciton
-      responses:
-      "200":
+      operationId: prediction.my_prediction
+      description: Predicts cancellation of hotel
       parameters:
-        - in: path 
-          name: id 
-          required: true 
-          schema:
-            type: array
-#adding accuracy score
-  /accuracy: 
-    get:
-      tags:
-      operation: accuracy_score
-      description: returns the accuracy score 
-      parameters:
-        - in: path 
-          name: accuracy 
+        - in: path
+          name: hotel
           required: true
-          schema: 
-            type: integer
+          schema:
+            type: number
+        - in: path
+          name: market
+          required: true
+          schema:
+            type: number
+        - in: path
+          name: deposit_type
+          required: true
+          schema:
+            type: number
+        - in: path
+          name: month
+          required: true
+          schema:
+            type: number
+        - in: path
+          name: day
+          required: true
+          schema:
+            type: number
+        - in: path
+          name: weeknight
+          required: true
+          schema:
+            type: number
+        - in: path
+          name: weekendnights
+          required: true
+          schema:
+            type: number
+        - in: path
+          name: adults
+          required: true
+          schema:
+            type: number
+      responses:
+        '200':
+          description: 'booking cancellation'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/CPU'
 servers:
   - url: 'http://localhost:8080/engr-222'
-  
+
+components:
+  schemas:
+    CPU:
+      type: object
+      required:
+        - model
+      properties:
+        model:
+          type: string
+    OS:
+      type: object
+      required:
+        - model
+      properties:
+        model:
+          type: string
